// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/properties/createdBy should match snapshot 1`] = `
<div>
  <div
    class="UserProperty octo-propertyvalue readonly"
  >
    <div
      class="UserProperty-item"
    >
      username_1
    </div>
  </div>
</div>
`;

exports[`components/properties/createdBy should match snapshot as guest 1`] = `
<div>
  <div
    class="UserProperty octo-propertyvalue readonly"
  >
    <div
      class="UserProperty-item"
    >
      username_1
      <div
        class="GuestBadge"
      >
        <div
          class="GuestBadge__box"
        >
          Guest
        </div>
      </div>
    </div>
  </div>
</div>
`;
